--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *notes.txt
 *get_data_form_csv.py
 *search_from_google.py
+*gui.spec
 /.idea/*
 /Exercises/*
 /__pycache__/*
@@ -9,4 +10,4 @@
 /journal/*
 /modules/*
 /bonus/*
-
+/build/*
